moved images to resources dir

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <body>
     <div class="container">
-        <img src="me.jpg" alt="Biswajit">
+        <img src="resources/me.jpg" alt="Biswajit">
         <h1>Biswajit Banerjee</h1>
         <p>Exploring the roots of life through code and curiosity 🌱💻🔍</p>
         <div class="links">
@@ -154,7 +154,7 @@
                         domain of protein folding, Ribosome, molecular evolution. <br>
                     </p>
                 </div>
-                <img src="Cool.png" alt="COOL">
+                <img src="resources/Cool.png" alt="COOL">
             </div>
 
             <div class="timeline-node">
@@ -169,7 +169,7 @@
                     <p>Pursuing a Masters degree at GeorgiaTech with Machine Learning specialization, while researching
                         at the COOL lab.</p>
                 </div>
-                <img src="gt.png" alt="MS Bioinformatics">
+                <img src="resources/gt.png" alt="MS Bioinformatics">
             </div>
 
             <div class="timeline-node">
@@ -186,8 +186,7 @@
                         Converted models to be deployable on mobile nad IoT devices.
                     </p>
                 </div>
-                <img src="https://play-lh.googleusercontent.com/gafihwFyHyruMG9xiIxUkcRY7sYb0ux7sRG7feJI6U1nZLd4rRakymEkeUKy0udM8RaZ"
-                    alt="Stellapps">
+                <img src="resources/stellapps.png" alt="Stellapps">
             </div>
 
             <div class="timeline-node">
@@ -203,7 +202,7 @@
                         Spark.
                     </p>
                 </div>
-                <img src="synopsys.png" alt="Synopsys">
+                <img src="resources/synopsys.png" alt="Synopsys">
             </div>
             <div class="timeline-node">
                 <div class="timeline-bullet"></div> <!-- Add bullet -->
@@ -218,7 +217,7 @@
                         Spark.
                     </p>
                 </div>
-                <img src="astrobio.png" alt="astrobio">
+                <img src="resources/astrobio.png" alt="astrobio">
             </div>
 
         </div>
