seperate the css from html

--- a/index.html
+++ b/index.html
@@ -4,120 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <style>
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h5 {
-            color: #021826;
-            /* Adjust the color to the shade of gray you like */
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            text-align: center;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        img {
-            width: 150px;
-            height: 150px;
-            border-radius: 10%;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .links a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #000;
-        }
-
-        .links a:hover {
-            color: #0077b5;
-        }
-
-        .timeline {
-            margin-top: 30px;
-            text-align: left;
-        }
-
-        .timeline-node {
-            display: flex;
-            align-items: flex-start;
-            margin-bottom: 30px;
-            position: relative;
-
-        }
-
-        .timeline-line {
-            width: 2px;
-            background-color: transparent;
-            border-left: 2px dotted black;
-            /* height: 100%; */
-            height: calc(100% - 20px);
-            position: absolute;
-            left: 70px;
-        }
-
-        .timeline-year {
-            flex: 0 0 60px;
-            text-align: left;
-            padding-top: 20px;
-        }
-
-        .timeline-content {
-            flex: 1;
-            padding-left: 31px;
-        }
-
-        .timeline-node img {
-            max-width: 100%;
-            /* height: auto;  */
-            margin-bottom: 10px;
-            margin-right: 20px;
-            width: 100px;
-            /* Define a specific width */
-            height: 100px;
-            /* Define a specific height */
-            object-fit: cover;
-            /*Maintain aspect ratio and cover the defined size */
-        }
-
-        .timeline-bullet {
-            width: 12px;
-            height: 12px;
-            background-color: black;
-            border-radius: 50%;
-            position: absolute;
-            left: 71px;
-            top: 10%;
-            transform: translate(-50%, -50%);
-        }
-
-        .content-heading h4,
-        .content-heading h5 {
-            margin: 0;
-        }
-    </style>
     <title>Your Portfolio</title>
 </head>
 
@@ -127,10 +15,10 @@
         <h1>Biswajit Banerjee</h1>
         <p>Exploring the roots of life through code and curiosity 🌱💻🔍</p>
         <div class="links">
-            <a href="https://www.linkedin.com/in/bbaner/"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            <a href="https://www.example.com"><i class="fas fa-print"></i>Resume</a>
-            <a href="https://bioinformatics.gatech.edu/biswajit-banerjee"><i
-                    class="fas fa-graduation-cap"></i>University</a>
+            <a href="https://www.linkedin.com/in/bbaner/"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
+            <a href="https://www.example.com"><i class="fas fa-print"></i> Resume</a>
+            <a href="https://bioinformatics.gatech.edu/biswajit-banerjee"><i class="fas fa-graduation-cap"></i> University</a>
+            <a href="blogs.html"><i class="fa-brands fa-blogger-b"></i> Blogs</a>
 
             <!-- Add more links as needed -->
         </div>
@@ -207,7 +95,7 @@
             <div class="timeline-node">
                 <div class="timeline-bullet"></div> <!-- Add bullet -->
                 <div class="timeline-line"></div>
-                <div class="timeline-year">2019-22</div>
+                <div class="timeline-year">2015-19</div>
                 <div class="timeline-content">
                     <div class="content-heading">
                         <h4>Bachlor of Tech in Computer Science & Engineering</h4>
