--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Your Portfolio</title>
+    <title>Meet Biswajit</title>
 </head>
 
 <body>
@@ -16,9 +16,9 @@
         <p>Exploring the roots of life through code and curiosity 🌱💻🔍</p>
         <div class="links">
             <a href="https://www.linkedin.com/in/bbaner/"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
-            <a href="https://www.example.com"><i class="fas fa-print"></i> Resume</a>
+            <a href="resources/resume-biswajit.pdf"><i class="fas fa-print"></i> Resume</a>
             <a href="https://bioinformatics.gatech.edu/biswajit-banerjee"><i class="fas fa-graduation-cap"></i> University</a>
-            <a href="blogs.html"><i class="fa-brands fa-blogger-b"></i> Blogs</a>
+            <!-- <a href="blogs.html"><i class="fa-brands fa-blogger-b"></i> Blogs</a> -->
 
             <!-- Add more links as needed -->
         </div>
@@ -105,7 +105,7 @@
                         Spark.
                     </p>
                 </div>
-                <img src="resources/astrobio.png" alt="astrobio">
+                <img src="resources/aec.png" alt="Asansol Engineering College">
             </div>
 
         </div>
