Fix errors in inex

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                         <h4>Graduate Researcher</h4>
                         <h5>Center for the Origin of Life</h5>
                     </div>
-                    <p>Working with a team of researchers from various domain at the COOL lab, Our goal is to find how
-                        life originated at earth
-                        and also possibilities of pesent of life in other planets.<br>
-                        As a graduate researcher, my role is to apply Machine Learning and Generative AI to the problem
-                        domain of protein folding, Ribosome, molecular evolution. <br>
+                    <p>Working with a team of researchers from various domains at the COOL lab, 
+                        our goal is to explore the origins of life on Earth and investigate the potential 
+                        presence of life on other planets.<br> 
+                        As a graduate researcher, my role involves applying Machine Learning and Generative AI 
+                        to the problem domains of protein folding, the Ribosome, and molecular evolution.
                     </p>
                 </div>
                 <img src="resources/Cool.png" alt="COOL">
@@ -54,8 +54,9 @@
                         <h4>Masters in Bioinformatics</h4>
                         <h5>Georgia Institute of Technology</h5>
                     </div>
-                    <p>Pursuing a Masters degree at GeorgiaTech with Machine Learning specialization, while researching
-                        at the COOL lab.</p>
+                    <p>
+                        I am pursuing a Master's degree at Georgia Tech, specializing in Machine Learning, 
+                        while actively conducting research at the COOL lab.</p>
                 </div>
                 <img src="resources/gt.png" alt="MS Bioinformatics">
             </div>
@@ -69,9 +70,9 @@
                         <h4>Senior Computer Vision Engineer</h4>
                         <h5>Stellapps</h5>
                     </div>
-                    <p>Created Computer Vision solutions for dairy and farm problems.
-                        It involved create light weighted models with fast inference time optimizqation.
-                        Converted models to be deployable on mobile nad IoT devices.
+                    <p>I have experience creating Computer Vision solutions to address challenges in the dairy and farming sectors. 
+                        This involved developing lightweight models to ensure fast inference times and optimizing them for efficiency. 
+                        Additionally, I successfully adapted these models for deployment on both mobile and IoT devices.
                     </p>
                 </div>
                 <img src="resources/stellapps.png" alt="Stellapps">
@@ -86,8 +87,12 @@
                         <h4>Research and Development Engineer, AI/ML</h4>
                         <h5>Synopsys</h5>
                     </div>
-                    <p>Spend a lot of time on creating and optimizing the data processing pipeline using Airflow and
-                        Spark.
+                    <p>I devoted a significant amount of time to crafting and refining the data processing pipeline, 
+                        leveraging tools like Airflow and Spark. 
+                        Within this framework, I developed machine learning solutions aimed at addressing pertinent 
+                        issues in chip design.<br> 
+                        Notable projects included predicting slack, classifying path groups, conducting root cause analysis, 
+                        and predicting clock skew.
                     </p>
                 </div>
                 <img src="resources/synopsys.png" alt="Synopsys">
@@ -101,8 +106,9 @@
                         <h4>Bachlor of Tech in Computer Science & Engineering</h4>
                         <h5>Asansol Engineering College</h5>
                     </div>
-                    <p>Spend a lot of time on creating and optimizing the data processing pipeline using Airflow and
-                        Spark.
+                    <p>Over a span of 4 years, I immersed myself in the study of diverse computer algorithms 
+                        and actively participated in numerous projects.  <br>
+                        Some noteworthy endeavors include the "Open Chat" Facebook Scholarship Winning Project in 2019 and my final year undergraduate project on "Image Segmentation of Geographical Data".
                     </p>
                 </div>
                 <img src="resources/aec.png" alt="Asansol Engineering College">
