--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <img src="resources/me.jpg" alt="Biswajit">
         <h1>Biswajit Banerjee</h1>
+        <h5>(Sumon)</h5>
         <p>Exploring the roots of life through code and curiosity 🌱💻🔍</p>
         <div class="links">
             <a href="https://www.linkedin.com/in/bbaner/"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
@@ -88,7 +89,7 @@
                         <h5>Synopsys</h5>
                     </div>
                     <p>I devoted a significant amount of time to crafting and refining the data processing pipeline, 
-                        leveraging tools like Airflow and Spark. 
+                        leveraging tools like Airflow and Spark. <br>
                         Within this framework, I developed machine learning solutions aimed at addressing pertinent 
                         issues in chip design.<br> 
                         Notable projects included predicting slack, classifying path groups, conducting root cause analysis, 
