--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://www.linkedin.com/in/bbaner/"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
             <a href="resources/resume-biswajit.pdf"><i class="fas fa-print"></i> Resume</a>
             <a href="https://bioinformatics.gatech.edu/biswajit-banerjee"><i class="fas fa-graduation-cap"></i> University</a>
-            <!-- <a href="blogs.html"><i class="fa-brands fa-blogger-b"></i> Blogs</a> -->
+            <a href="login.html"><i class="fa-brands fa-blogger-b"></i>Scheduler</a>
 
             <!-- Add more links as needed -->
         </div>
